static/basic.css
@font-face {
    font-family: 'LibreBaskerville';
    src: url('LibreBaskerville-Regular.ttf');
}

@font-face {
    font-family: 'Montserrat';
    src: url('Montserrat-Regular.ttf')
}

@font-face {
    font-family: "IBMPlex";
    src: url('IBMPlexSans-Regular.ttf')
}

body {
    margin: 0;
    padding: 0;
    background-color: black;
    position:relative;
}

.word_soup {
    position: absolute;
    background-color: white;
    top: 5vh;
    left: 36vw;
    width: 60vw;
    height: 60vh;
    display: none;
    z-index: 5;
    border: black;
    overflow: hidden;
}

.soup_word {
    position: absolute;
    margin-left: 1px;
    margin-top: 1px;
    color:black;
    opacity: 0;
    font-size: 20px;
}

#left_panel {
    position: absolute;
    margin-left: 5%;
    margin-top: 5%;
    align-self: left;
    background-color: #fc7f74;
    width: 25.33%;
    height: 80%;
}

#left_panel p {
    opacity: 0;
    z-index: 4;
    margin-left: 4px;
    margin-right: 4px;
    font-family: 'LibreBaskerville';
}

#banner_container {
    position: relative;
    width: 100vw;
    height: 90vh;
    overflow: hidden;
}

#hidden_body {
    position: absolute;
    z-index: 3;
    background-color: #d1685e;
    margin-left: 0.2vw;
    margin-top: 90vh;
    height: 90vh;
    width: 33vw;
    overflow: visible;
    opacity: 0;
}

#hidden_body h1 {
    font-family: "LibreBaskerville";
    text-align: center;
}

#banner_image img {
    position: absolute;
    width: 100%;
    z-index: -1;
}

#title_card {
    text-align: center;
    background-color: #f4e9cd;
    color: black;
    z-index: 0;
    width: 20%;
    position: absolute;
    margin-left: 2%;
    margin-top: 10px;
    clear: both;
    opacity: 0;
}

#title_card h1 {
    font-family: "LibreBaskerville";   
}

#title_card h2 {
    font-family: "LibreBaskerville";   
}

#footer {
    z-index: 1;
    display: inline-block;
    width: 100vw;
    opacity: 0;
}

#footer1 {
    margin-left: 0.2vw;
}

.footer_subsection {
    color:black;
    margin-top: 21px;
    margin-bottom: 0px;
    position: relative;
    display: inline-block;
    width: 33vw;
    height: 9.5vh;
    background-color: #f4e9cd;
    text-align: center;
    z-index: 2;
}

.footer_subsection:hover {
    background-color: #d6ccb2;
    color: black;
}

.footer_subsection h2 {
    font-family: "LibreBaskerville";
}

/*.footer_subsection {
    padding-left: 1 vw;
    width: 33.33333333vw;
    height: 9.5vh;
    position: absolute;
    margin-top: 0.25vh;
    background-color: #bf1d02;
    z-index: 0;
}*/

